--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -3,5 +3,9 @@
 @tailwind utilities;
 
 .input {
-  @apply w-[36rem] h-[4rem] rounded-lg border-none bg-gray-200 pl-8 text-base;
+  @apply w-[4/5] h-[4rem] rounded-lg border-none bg-gray-200 pl-8 text-base;
+}
+
+.auth-button {
+  @apply bg-[#ffca40] rounded-lg h-[4rem] font-bold text-xl w-[3/4];
 }
