--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -14,4 +14,6 @@
     width: screen;
     margin: 0;
     padding: 0;
+    font-family: 'Gilroy-Bold', 'Gill Sans', 'Gill Sans MT', Calibri,
+        'Trebuchet MS', sans-serif;
 }
