--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -11,7 +11,8 @@
 }
 
 #app {
-    width: screen;
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Gilroy-Bold', 'Gill Sans', 'Gill Sans MT', Calibri,
