--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -17,4 +17,17 @@
     padding: 0;
     font-family: 'Gilroy-Bold', 'Gill Sans', 'Gill Sans MT', Calibri,
         'Trebuchet MS', sans-serif;
+    color: #2a3238;
+}
+
+.foods-grid {
+    display: grid;
+    gap: 24px 4px;
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+}
+
+.ingredients-grid {
+    display: grid;
+    gap: 24px 4px;
+    grid-template-columns: repeat(auto-fill, minmax(224px, 1fr));
 }
