--- a/frontend/src/assets/fonts/gilroy/gilroy.css
+++ b/frontend/src/assets/fonts/gilroy/gilroy.css
@@ -131,7 +131,7 @@
 }
 
 @font-face {
-    font-family: 'Gilroy';
+    font-family: 'Gilroy bold';
     src: url('Gilroy-Bold.eot');
     src: local('Gilroy Bold'), local('Gilroy-Bold'),
         url('Gilroy-Bold.eot?#iefix') format('embedded-opentype'),
